More bug fixes in calculator.js. Flexboxes added

--- a/style.css
+++ b/style.css
@@ -7,9 +7,12 @@
 }
 
 .calculatorContainer{
-    max-width: 100px;
+    max-width: 150px;
+}
+.buttonContainer{
+    display:flex;
 }
 
 .screen{
-
+    
 }
